manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw02-deployment
  labels:
    app: hw02
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hw02
  template:
    metadata:
      labels:
        app: hw02
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: hw02
        image: toolen/hw02:0.0.1
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 60
        resources:
          limits:
            cpu: 100m
            memory: 64Mi
          requests:
            cpu: 50m
            memory: 32Mi
        securityContext:
          readOnlyRootFilesystem: true
