manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hw02-service
spec:
  selector:
    app: hw02
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
